🔨  fix css to work hamburguer on iphone

--- a/src/Components/Components.css
+++ b/src/Components/Components.css
@@ -46,6 +46,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .headerComp .collapseAll {
